redact-pdf/face-anonymisation/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: face-anonymisation-service
  namespace: anonymus
spec:
  selector:
    app: face-anonymisation
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
